--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
+    "@vitest/coverage-v8": "^1.6.1",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vitest": "^1.3.1"
