--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "vitest",
-    "cli": "tsx src/cli.ts"
+    "cli": "tsx src/cli.ts",
+    "lint": "eslint . --ext .ts",
+    "scan:ast-grep": "ast-grep --config ast-grep.yml scan .",
+    "scan:secrets": "gitleaks detect --source . --redact",
+    "audit": "pnpm audit --prod --audit-level high"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
@@ -14,8 +18,15 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/node": "^20.11.30",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
     "@vitest/coverage-v8": "^1.6.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-security-node": "^1.1.4",
+    "globals": "^16.5.0",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
     "vitest": "^1.3.1"
